# openstack-service-example

./: README.md  setup.cfg  tox.ini
convertor/: __init__.py  _i18n.py
convertor/api/: acl.py  app.py  config.py  hooks.py  wsgi.py
convertor/api/controllers/: base.py  link.py  root.py
convertor/api/controllers/v1/: __init__.py  collection.py  task.py  types.py  utils.py
convertor/api/middleware/: auth_token.py
convertor/cmd/: __init__.py  api.py  dbmanage.py  worker.py
convertor/common/: clients.py  config.py  context.py  exception.py  keystone_helper.py  policy.py  rpc.py  service.py  service_manager.py  utils.py
convertor/conf/: __init__.py  api.py  clients_auth.py  db.py  glance_client.py  keystone_client.py  opts.py  paths.py  worker.py
convertor/db/: api.py  migration.py
convertor/db/sqlalchemy/: api.py  migration.py  models.py
convertor/db/sqlalchemy/alembic/: env.py
convertor/objects/: __init__.py  base.py  fields.py  task.py
convertor/worker/: base.py  default.py  manager.py  rpcapi.py
convertor/worker/messaging/: trigger.py
etc/convertor/oslo-config-generator/: convertor.conf
etc/convertor/oslo-policy-generator/: convertor-policy-generator.conf
