[metadata]
name = python-watcher
summary = OpenStack Watcher provides a flexible and scalable resource optimization service for multi-tenant OpenStack-based clouds.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/watcher/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    
data_files =
    etc/ = etc/*

[entry_points]
oslo.config.opts =
    watcher = watcher.conf.opts:list_opts

oslo.policy.policies =
    watcher = watcher.common.policies:list_rules

oslo.policy.enforcer =
    watcher = watcher.common.policy:get_enforcer

console_scripts =
    watcher-api = watcher.cmd.api:main
    watcher-db-manage = watcher.cmd.dbmanage:main
    watcher-decision-engine = watcher.cmd.decisionengine:main
    watcher-applier = watcher.cmd.applier:main
    watcher-sync = watcher.cmd.sync:main
    watcher-status = watcher.cmd.status:main

wsgi_scripts =
    watcher-api-wsgi = watcher.api.wsgi:initialize_wsgi_app

watcher.database.migration_backend =
    sqlalchemy = watcher.db.sqlalchemy.migration
