[metadata]
name = python-watcher
summary = OpenStack Watcher provides a flexible and scalable resource optimization service for multi-tenant OpenStack-based clouds.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/watcher/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    
data_files =
    etc/ = etc/*

[entry_points]
oslo.config.opts =
    convertor = convertor.conf.opts:list_opts

console_scripts =
    convertor-api = convertor.cmd.api:main
    convertor-db-manage = convertor.cmd.dbmanage:main
    convertor-worker = convertor.cmd.worker:main

wsgi_scripts =
    convertor-api-wsgi = convertor.api.wsgi:initialize_wsgi_app

watcher.database.migration_backend =
    sqlalchemy = convertor.db.sqlalchemy.migration
